--- a/Ecommerce_customers.ipynb
+++ b/Ecommerce_customers.ipynb
@@ -679,8 +679,8 @@
    "id": "da7e8df5",
    "metadata": {},
    "source": [
-    "the yerly amount spent shows the last lines.\n",
-    "-there is a faint correlation between yerly amount spent and avg-session length\n",
+    "the yearly amount spent shows the last lines.\n",
+    "-there is a faint correlation between yearly amount spent and avg-session length\n",
     "-time on website dont show any correlation\n",
     "- length on membership shows a strong correlation"
    ]
@@ -2097,13 +2097,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "452bdbba",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_absolute_error, mean_squared_error \n",
-    "import math"
+    "import math\n"
    ]
   },
   {
